examples/ill-formed/primitives/RepeatedParameter.primitive
Primitive Repeated(Int x, Int x) {
    Int y = x;
}
